--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.15.3",
     "git": "^0.1.5",
     "jade": "^1.11.0",
+    "json": "^9.0.6",
     "mongoose": "^4.10.5",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
