--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mongoose": "^4.10.5",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "passport-session": "^1.0.2",
     "passport-strategy": "^1.0.0",
